<resources>
    <string name="app_name">Inventory Tracking</string>
    <string name="menu_title">Menu</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="homepage">Homepage</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_home">Home</string>
    <string name="auth_failed">Authaurisation Failed</string>
    <string name="signed_in">You are signed in</string>
    <string name="registering">Registering...</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="logging_in">Logging in...</string>
    <string name="login_failed">Login Failed</string>
    <string name="required">Required.</string>
    <string name="title_activity_register">Registration</string>
    <string name="password_match">Passwords do not match</string>
    <string name="project">Project</string>
    <string name="projects">Projects</string>
    <string name="equipment">Equipment</string>
    <string name="individuals">Individuals</string>
    <string name="manage">Manage</string>
    <string name="generate">Generate List</string>
    <string name="title_activity_add_equipment">AddEquipmentActivity</string>
    <string name="add_another_member">Add Another Member</string>
    <string name="create_project">Create Project</string>
    <string name="set_date">Set Date</string>
    <string name="team_members">Team Members</string>
    <string name="team_leader">Team Leader</string>
    <string name="project_name">Project name</string>
    <string name="project_description">Project description</string>
    <string name="add_item">Add Item</string>
    <string name="quantity">Quantity</string>
    <string name="name">Name</string>
    <string name="barcode">Barcode</string>
    <string name="scan">Scan</string>
    <string name="textview">TextView</string>
    <string name="add_new_members">Add New Members</string>
    <string-array name="generate_list_options">
        <item>Objects Attached to Individual</item>
        <item>Objects Attached to Project</item>
        <item>Objects to be Reclaimed</item>
        <item>Damaged Items</item>
    </string-array>
</resources>
