<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sweng.aa03.inventorytracking.view.NewProjectActivity"
    android:background="@color/appThemeColor"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/projectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/project_name"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:layout_margin="5dp" />

    <EditText
        android:id="@+id/projectDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/project_description"
        android:textColorLink="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColor="@android:color/white"
        android:textCursorDrawable="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:textAlignment="center"
        android:layout_margin="5dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
    <Button
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_date"
        android:textColorLink="@color/appThemeColor"
        android:textColor="@color/appThemeColor"
        android:background="@android:color/white"
        android:layout_margin="5dp" />
        <TextView
            android:id="@+id/date_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_leader"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textCursorDrawable="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_margin="5dp" />
    <Spinner
        android:id="@+id/leaderSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:backgroundTint="@android:color/white"
        style="@style/mySpinnerItemStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_members"
        android:layout_margin="5dp"
        android:textColor="@android:color/white" />

    <sweng.aa03.inventorytracking.view.MultiSelectionSpinner
        android:id="@+id/team_members_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_project"
        android:onClick="createProject"
        android:background="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textColor="@color/appThemeColor"
        android:layout_margin="5dp" />

</LinearLayout>