<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="sweng.aa03.inventorytracking.view.HomeActivity"
    android:background="@color/appThemeColor">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button4"
            android:background="@android:color/white"
            android:layout_margin="16dp"
            android:textColor="@color/appThemeColor"
            android:onClick="onClickScan"
            android:elevation="1dp" />

        <Button
            android:text="@string/individuals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button5"
            android:background="@android:color/white"
            android:layout_margin="16dp"
            android:textColor="@color/appThemeColor"
            android:onClick="onClickIndividual"
            android:elevation="1dp" />

        <Button
            android:text="@string/projects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button3"
            android:background="@android:color/white"
            android:layout_margin="16dp"
            android:textColor="@color/appThemeColor"
            android:onClick="onClickProjects"
            android:elevation="1dp" />

        <Button
            android:text="@string/equipment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button2"
            android:background="@android:color/white"
            android:layout_margin="16dp"
            android:textColor="@color/appThemeColor"
            android:onClick="onClickEquipment" />

        <Button
            android:text="Lists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button6"
            android:background="@android:color/white"
            android:layout_margin="16dp"
            android:textColor="@color/appThemeColor"
            android:onClick="onClickManage" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
