<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_equipment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sweng.aa03.inventorytracking.view.NewEquipmentActivity"
    android:background="@color/appThemeColor">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="38dp"
        android:id="@+id/barcodeInput"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:hint="@string/barcode"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:textSize="25sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/barcodeInput"
        android:layout_alignLeft="@+id/barcodeInput"
        android:layout_alignStart="@+id/barcodeInput"
        android:layout_marginTop="34dp"
        android:id="@+id/nameInput"
        android:textAlignment="center"
        android:hint="@string/name"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:textSize="25sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/nameInput"
        android:layout_alignRight="@+id/nameInput"
        android:layout_alignEnd="@+id/nameInput"
        android:layout_marginTop="54dp"
        android:id="@+id/amountInput"
        android:hint="@string/quantity"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:textSize="25sp"
        android:textAlignment="center" />

    <Button
        android:text="@string/add_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:id="@+id/addButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        style="@android:style/Widget.Button"
        android:layout_below="@+id/amountInput"
        android:layout_centerHorizontal="true"
        android:onClick="addOnClick"
        android:textColor="@color/appThemeColor"
        android:background="@android:color/white"
        android:textSize="24sp" />
</RelativeLayout>
